--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -13,3 +13,7 @@
     "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
+
+html {
+    background-color: #fff;
+}
